--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>imagem aqui</h1>
-    <ul> 
-        <li>escola</li>
-        <li>estudante</li>
-    </ul>
+
+    <header>
+        <h1>imagem aqui</h1>
+        <ul> 
+            <li>escola</li>
+            <li>estudante</li>
+        </ul>
+      
+    </header>
+   
 </body>
 </html>
