--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>imagem aqui</h1>
+        <img src="" alt="">
         <ul> 
             <li>escola</li>
             <li>estudante</li>
