--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="alura.start.png" alt="">
+        <img src="alurastart.png" alt="">
         <ul> 
             <li>escola</li>
             <li>estudante</li>
