--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="alurastart.png" alt="alurastart">
+        <img class="cabecalho-imagem" src="alurastart.png" alt="alurastart">
         <ul> 
             <li>escola</li>
             <li>estudante</li>
