--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <header>
+    <header class="cabecalho">
         <img class="cabecalho-imagem" src="alurastart.png" alt="alurastart">
-        <ul> 
-            <li>escola</li>
-            <li>estudante</li>
+        <ul class="cabecalho-lista"> 
+            <li> class="cabecalho-lista-item" escola</li>
+            <li> class="cabecalho-lista-item" estudante</li>
         </ul>
       
     </header>
