--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="alurastart.png" alt="alurastart">
+
         <ul class="cabecalho-lista"> 
-            <li> class="cabecalho-lista-item" escola</li>
-            <li> class="cabecalho-lista-item" estudante</li>
+
+            <li>escola</li>
+            <li>estudante</li>
+
         </ul>
       
     </header>
