--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <ul class="cabecalho-lista"> 
 
-            <li>escola</li>
-            <li>estudante</li>
+            <li class="cabecalho-lista-item">escola</li>
+            <li class="cabecalho-lista-item">estudante</li>
 
         </ul>
       
